Fix offset problem on tablet's browser and auto blur.

--- a/_less/_utilities.less
+++ b/_less/_utilities.less
@@ -51,16 +51,10 @@
 // For Affix plugin
 // -------------------------
 
-// Adjust affix to be responsive
+// added - Adjust affix to be responsive
 @media screen and (min-width: @screen-sm-min) {
   .affix {
     position: fixed;
     top: @line-height-computed;
-
-    &-top,
-    &-bottom {
-      position: absolute;
-      top: 0;
-    }
   }
 }
